[package]
name = "partner-chains-cardano-offchain"
version = "1.2.0"
authors = ["IOG"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/partner-chains"
description = "Cardano offchain code experiment in Rust"
readme = "readme.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

sidechain-domain = { workspace = true, features = ["std"] }
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
inquire = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid", "ed25519"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
cli-commands = { workspace = true }
chain-params = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tempfile = { workspace = true }
secp256k1 = { workspace = true, features = ["std"] }
colored = { version = "2.1.0" }
hex-literal = { workspace = true }
pallas-addresses = { git = "https://github.com/txpipe/pallas.git", tag = "v0.30.2" }
pallas-primitives = { git = "https://github.com/txpipe/pallas.git", tag = "v0.30.2" }
jsonrpsee = { workspace = true, features = [
    "client-core",
    "http-client",
    "macros",
] }
tokio = { workspace = true }
minicbor = { workspace = true }
plutus = { workspace = true }
# untyped plutus core
uplc = { version = "1.1.3" }
reqwest = { version = "0.12", features = ["json"] }
db-sync-follower = { workspace = true, features = ["candidate-source"] }
cardano-serialization-lib = { version = "12.1.0" }

[dev-dependencies]
pretty_assertions = { workspace = true }
